--- a/bag.html
+++ b/bag.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="./js/style.css" />
     <script
       src="https://kit.fontawesome.com/fff2546269.js"
       crossorigin="anonymous"
@@ -130,7 +130,7 @@
       <section class="st-container">
         <div id="st-navP1">
           <div>
-            <span><img src="../images/flag.png" alt="flag image" /></span>
+            <span><img src="./images/flag.png" alt="flag image" /></span>
             <i class="fa-solid fa-grip-lines-vertical"></i>
             <span><strong>EN</strong></span>
             <i class="fa-solid fa-grip-lines-vertical"></i>
@@ -177,8 +177,7 @@
           <div class="st-dropdown">
             <div>
               <a
-                href="new.html"
-                onclick="displayCards('new'); event.preventDefault();"
+                onclick="event.preventDefault(); redirect('new'); displayCards('new');"
                 >new</a
               >
               <div class="st-content st-newDD" id="">
@@ -285,8 +284,7 @@
             </div>
             <div>
               <a
-                href="new.html"
-                onclick="displayCards('clothing'); event.preventDefault();"
+                onclick="event.preventDefault(); redirect('clothing'); displayCards('clothing');"
                 >clothing</a
               >
               <div class="st-content st-clothingDD">
@@ -307,9 +305,9 @@
                   <a href="#">all clothing</a>
                   <a href="#">dresses</a>
                   <a href="#">tops</a>
-                  <a href="#">jackets \& coats</a>
-                  <a href="#">jumpsuits \& rompers</a>
-                  <a href="#">sweaters \& kints</a>
+                  <a href="#">jackets & coats</a>
+                  <a href="#">jumpsuits & rompers</a>
+                  <a href="#">sweaters & kints</a>
                   <a href="#">loungwears</a>
                   <a href="#">denim</a>
                   <a href="#">pants</a>
@@ -342,8 +340,7 @@
             </div>
             <div>
               <a
-                href="new.html"
-                onclick="displayCards('dress'); event.preventDefault();"
+                onclick="event.preventDefault(); redirect('dress'); displayCards('dress');"
                 >dresses</a
               >
               <div class="st-content st-dressesDD">
@@ -390,8 +387,7 @@
             </div>
             <div>
               <a
-                href="new.html"
-                onclick="displayCards('shoes'); event.preventDefault();"
+                onclick="event.preventDefault(); redirect('shoes'); displayCards('shoes');"
                 >shoes</a
               >
               <div class="st-content st-shoesDD">
@@ -434,8 +430,7 @@
             </div>
             <div>
               <a
-                href="new.html"
-                onclick="displayCards('bags'); event.preventDefault();"
+                onclick="event.preventDefault(); redirect('bags'); displayCards('bags');"
                 >bags</a
               >
               <div class="st-content st-bagsDD">
@@ -477,7 +472,10 @@
               </div>
             </div>
             <div>
-              <a href="new.html">accessories</a>
+              <a
+                onclick="event.preventDefault(); redirect('accessories'); displayCards('accessories');"
+                >accessories</a
+              >
               <div class="st-content st-accessoriesDD">
                 <div>
                   <img
@@ -512,8 +510,7 @@
             </div>
             <div>
               <a
-                href="new.html"
-                onclick="displayCards('beauty'); event.preventDefault();"
+                onclick="event.preventDefault(); redirect('beauty'); displayCards('beauty');"
                 >beauty</a
               >
               <div class="st-content st-beautyDD">
@@ -559,17 +556,12 @@
             </div>
             <div>
               <a
-                href="new.html"
-                onclick="displayCards('sale'); event.preventDefault();"
+                onclick="event.preventDefault(); redirect('sale'); displayCards('sale');"
                 >sale</a
               >
             </div>
             <div>
-              <a
-                href="shops.html"
-                onclick="displayCards('shops'); event.preventDefault();"
-                >shops</a
-              >
+              <a href="shops.html">shops</a>
               <div class="st-content st-shopsDD">
                 <div>
                   <img
@@ -675,7 +667,7 @@
           </div>
           <div id="international">
             <p>FREE International shipping for orders above 100 RS</p>
-            <img src="../images/payment-logo.png" alt="" />
+            <img src="./images/payment-logo.png" alt="" />
           </div>
         </div>
       </div>
@@ -695,5 +687,5 @@
       </div>
     </main>
   </body>
-  <script src="../bag.js"></script>
+  <script src="./js/bag.js"></script>
 </html>
