--- a/productdisplay.html
+++ b/productdisplay.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product Page</title>
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="./js/style.css" />
   </head>
   <body>
     <button id="backpage">BACK</button>
     <div id="ppage"></div>
   </body>
-  <script src="../product.js"></script>
+  <script src="./js/product.js"></script>
 </html>
