--- a/signinup.html
+++ b/signinup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign in | Forward</title>
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="./js/style.css" />
   </head>
 
   <body>
@@ -78,5 +78,5 @@
       Please also read our <a href="" class="maclr">Privacy Policy</a>
     </p>
   </body>
-  <script src="../signin.js"></script>
+  <script src="./js/signin.js"></script>
 </html>
