--- a/wishlist.html
+++ b/wishlist.html
@@ -3,8 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FWRD Shops</title>
-    <link rel="stylesheet" href="../style.css" />
+    <title>FWRD Wishlist</title>
+    <link rel="stylesheet" href="./js/style.css" />
+    <script
+      src="https://kit.fontawesome.com/fff2546269.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
   </head>
 
   <body>
@@ -14,7 +22,7 @@
         <section class="st-container">
           <div id="st-navP1">
             <div>
-              <span><img src="../images/flag.png" alt="flag image" /></span>
+              <span><img src="./images/flag.png" alt="flag image" /></span>
               <i class="fa-solid fa-grip-lines-vertical"></i>
               <span><strong>EN</strong></span>
               <i class="fa-solid fa-grip-lines-vertical"></i>
@@ -61,8 +69,7 @@
             <div class="st-dropdown">
               <div>
                 <a
-                  href="new.html"
-                  onclick="displayCards('new'); event.preventDefault();"
+                  onclick="event.preventDefault(); redirect('new'); displayCards('new');"
                   >new</a
                 >
                 <div class="st-content st-newDD" id="">
@@ -173,8 +180,7 @@
               </div>
               <div>
                 <a
-                  href="new.html"
-                  onclick="displayCards('clothing'); event.preventDefault();"
+                  onclick="event.preventDefault(); redirect('clothing'); displayCards('clothing');"
                   >clothing</a
                 >
                 <div class="st-content st-clothingDD">
@@ -230,8 +236,7 @@
               </div>
               <div>
                 <a
-                  href="new.html"
-                  onclick="displayCards('dress'); event.preventDefault();"
+                  onclick="event.preventDefault(); redirect('dress'); displayCards('dress');"
                   >dresses</a
                 >
                 <div class="st-content st-dressesDD">
@@ -282,8 +287,7 @@
               </div>
               <div>
                 <a
-                  href="new.html"
-                  onclick="displayCards('shoes'); event.preventDefault();"
+                  onclick="event.preventDefault(); redirect('shoes'); displayCards('shoes');"
                   >shoes</a
                 >
                 <div class="st-content st-shoesDD">
@@ -326,8 +330,7 @@
               </div>
               <div>
                 <a
-                  href="new.html"
-                  onclick="displayCards('bags'); event.preventDefault();"
+                  onclick="event.preventDefault(); redirect('bags'); displayCards('bags');"
                   >bags</a
                 >
                 <div class="st-content st-bagsDD">
@@ -369,7 +372,10 @@
                 </div>
               </div>
               <div>
-                <a href="new.html">accessories</a>
+                <a
+                  onclick="event.preventDefault(); redirect('accessories'); displayCards('accessories');"
+                  >accessories</a
+                >
                 <div class="st-content st-accessoriesDD">
                   <div>
                     <img
@@ -404,8 +410,7 @@
               </div>
               <div>
                 <a
-                  href="new.html"
-                  onclick="displayCards('beauty'); event.preventDefault();"
+                  onclick="event.preventDefault(); redirect('beauty'); displayCards('beauty');"
                   >beauty</a
                 >
                 <div class="st-content st-beautyDD">
@@ -451,17 +456,12 @@
               </div>
               <div>
                 <a
-                  href="new.html"
-                  onclick="displayCards('sale'); event.preventDefault();"
+                  onclick="event.preventDefault(); redirect('sale'); displayCards('sale');"
                   >sale</a
                 >
               </div>
               <div>
-                <a
-                  href="new.html"
-                  onclick="displayCards('shops'); event.preventDefault();"
-                  >shops</a
-                >
+                <a href="shops.html">shops</a>
                 <div class="st-content st-shopsDD">
                   <div>
                     <img
@@ -524,310 +524,13 @@
         </section>
       </nav>
 
-      <main>
-        <h2 class="st-heading">welcome to the fwrd shops</h2>
-        <div class="st-cardContainer">
-          <a href="#">
-            <div>
-              <img
-                src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_vacationshop.jpg"
-                alt=""
-              />
-              <h4>the vacation shop</h4>
-              <p>
-                Retreat to somewhere bright & warm with our resort-ready edit of
-                dresses, swimwear, bags + more.
-              </p>
-              <p>shop now</p>
-            </div>
-          </a>
-          <a href="#">
-            <div>
-              <img
-                src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_thecottonshop.jpg"
-                alt=""
-              />
-              <h4>the cotton shop</h4>
-              <p>
-                This season, enjoy life's everyday moments in cotton, the fabric
-                we know, love, and live in.
-              </p>
-              <p>shop now</p>
-            </div>
-          </a>
-          <a href="#">
-            <div>
-              <img
-                src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_kj.jpg"
-                alt=""
-              />
-              <h4>Kendall Jenner, Creative Director FWRD</h4>
-              <p>
-                Shop the latest must-have picks from Kendall's edit & explore
-                our latest campaigns + more.
-              </p>
-              <p>shop now</p>
-            </div>
-          </a>
-
-          <a href="#">
-            <div>
-              <img
-                src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_occassionshop.jpg"
-                alt=""
-              />
-              <h4>The Occasion Shop</h4>
-              <p>
-                Formal event on your radar? We've got all your options, from
-                timeless to statement-making.
-              </p>
-              <p>shop now</p>
-            </div>
-          </a>
-          <a href="#">
-            <div>
-              <img
-                src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_welcometospring.jpg"
-                alt=""
-              />
-              <h4>Welcome to Spring '24</h4>
-              <p>
-                Get ahead of the curve with the standout colors & trends to wear
-                for the new season
-              </p>
-              <p>shop now</p>
-            </div>
-          </a>
-          <a href="#">
-            <div>
-              <img
-                src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_springboho.jpg"
-                alt=""
-              />
-              <h4>Spring Boho</h4>
-              <p>
-                Fall in love with the most desirable pieces that remix high-
-                femme & boho
-              </p>
-              <p>shop now</p>
-            </div>
-          </a>
-
-          <a href="#">
-            <div>
-              <img
-                src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_matchingsets.jpg"
-                alt=""
-              />
-              <h4>Matching Sets</h4>
-              <p>
-                From satin stunners to jersey draped elegance, discover the
-                matching sets designed to make your life easier.
-              </p>
-              <p>shop now</p>
-            </div>
-          </a>
-          <a href="#">
-            <div>
-              <img
-                src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_swimshop.jpg"
-                alt=""
-              />
-              <h4>The Swim Shop</h4>
-              <p>
-                As high temperatures start to take off, it's time to strategize
-                your new-season of swimwear.
-              </p>
-              <p>shop now</p>
-            </div>
-          </a>
-          <a href="#">
-            <div>
-              <img
-                src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_rsvp.jpg"
-                alt=""
-              />
-              <h4>RSVP In Style</h4>
-              <p>
-                The party doesn't stop here-discover all the stunning event
-                dresses ready for your debut
-              </p>
-              <p>shop now</p>
-            </div>
-          </a>
-
-          <a href="#">
-            <div>
-              <img
-                src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_everydayfashion.jpg"
-                alt=""
-              />
-              <h4>Everyday Fashion Formulas</h4>
-              <p>
-                Flowing with styling opportunities & wear-and-go versatility,
-                these quiet staples will set the new standard of everyday
-                dressing
-              </p>
-              <p>shop now</p>
-            </div>
-          </a>
-          <a href="#">
-            <div>
-              <img
-                src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_renew.jpg"
-                alt=""
-              />
-              <h4>FWRD Renew</h4>
-              <p>
-                From one-of-a-kind treasures to the latest in current trends,
-                discover our collection of pre-loved items sourced right to you.
-              </p>
-              <p>shop now</p>
-            </div>
-          </a>
-          <a href="#">
-            <div>
-              <img
-                src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_preciouscargo.jpg"
-                alt=""
-              />
-              <h4>Precious Cargo</h4>
-              <p>
-                Spotted on everything from trousers to bags, we're celebrating
-                the official return of the cargo trend.
-              </p>
-              <p>shop now</p>
-            </div>
-          </a>
-
-          <a href="#">
-            <div>
-              <img
-                src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_beauty.jpg"
-                alt=""
-              />
-              <h4>FWRD Beauty</h4>
-              <p>
-                From skincare, hair care + more, your best beauty moment starts
-                here
-              </p>
-              <p>shop now</p>
-            </div>
-          </a>
-          <a href="#">
-            <div>
-              <img
-                src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_EP.jpg"
-                alt=""
-              />
-              <h4>Editors' Picks</h4>
-              <p>Our editors share their favorite new looks of the season</p>
-              <p>shop now</p>
-            </div>
-          </a>
-          <a href="#">
-            <div>
-              <img
-                src="https://is4.revolveassets.com/images/up/2024/April/042924_f_shops_home.jpg"
-                alt=""
-              />
-              <h4>Step Inside</h4>
-              <p>
-                Give your space that five-star feel with our latest arrivals in
-                home décor
-              </p>
-              <p>shop now</p>
-            </div>
-          </a>
+      <div id="st-wishlist">
+        <div>
+          <a href="#" value="wishlist" id="wishlist">Wish List</a>
+          <a href="#" value="mydesigners" id="mydesigners">My Designers</a>
         </div>
-
-        <h2 class="st-heading">trends</h2>
-        <div class="st-cardContainer">
-          <a href="#">
-            <div>
-              <img
-                src="https://is4.revolveassets.com/images/up/2024/May/050224_Portrait_f_isabelmarant.jpg"
-                alt=""
-              />
-              <h4>Isabel Marant</h4>
-              <p>The Spring/Summer '24 Collection</p>
-              <p>shop now</p>
-            </div>
-          </a>
-          <a href="#">
-            <div>
-              <img
-                src="https://is4.revolveassets.com/images/up/2024/May/050224_Portrait_f_eclecticromance.jpg"
-                alt=""
-              />
-              <h4>Eclectic Romance</h4>
-              <p>
-                Fall in love with the most desirable pieces that remix high-
-                femme & boho-a dynamic wardrobe spotlighting ethereal energy.
-              </p>
-              <p>shop now</p>
-            </div>
-          </a>
-          <a href="#">
-            <div>
-              <img
-                src="https://is4.revolveassets.com/images/up/2024/May/050224_Portrait_f_kj.jpg"
-                alt=""
-              />
-              <h4>Spring Suiting</h4>
-              <p>
-                This season's updates are seen in softer fabrics and more
-                relaxed tailoring.
-              </p>
-              <p>shop now</p>
-            </div>
-          </a>
-
-          <a href="#">
-            <div>
-              <img
-                src="https://is4.revolveassets.com/images/up/2024/May/050224_Portrait_f_topitoff.jpg"
-                alt=""
-              />
-              <h4>TTop It Off</h4>
-              <p>
-                Start your new wardrobe selections with our rundown of the most
-                trend-setting tops for spring.
-              </p>
-              <p>shop now</p>
-            </div>
-          </a>
-          <a href="">
-            <div>
-              <img
-                src="https://is4.revolveassets.com/images/up/2024/May/050224_Portrait_f_closetstaples.jpg"
-                alt=""
-              />
-              <h4>The Closet Staples to Buy Now</h4>
-              <p>
-                We're championing the classics and diving into our curation of
-                the top closet updates to reinvent your spring wardrobe
-              </p>
-              <p>shop now</p>
-            </div>
-          </a>
-          <a href="#">
-            <div>
-              <img
-                src="https://is4.revolveassets.com/images/up/2024/May/050224_Portrait_f_frenchgirlstyle.jpg"
-                alt=""
-              />
-              <h4>French Girl Style</h4>
-              <p>
-                Embody that enviable Parisian philosophy with these
-                quintessential French girl-approved closet must-haves
-              </p>
-              <p>shop now</p>
-            </div>
-          </a>
-        </div>
-      </main>
-
+      </div>
+      <div id="wishcontainer"></div>
       <footer>
         <!-- mahesh -->
         <div id="mafoot1">
@@ -889,6 +592,7 @@
     </section>
   </body>
 
+  <script src="./js/wish.js"></script>
   <script
     src="https://kit.fontawesome.com/b9d3c9efb7.js"
     crossorigin="anonymous"
